<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
            </group>
        </menu>
    </item>

    <item android:title="@string/about">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_dev"
                    android:icon="@drawable/ic_developer_mode_black_24dp"
                    android:title="@string/developers" />

                <item
                    android:id="@+id/nav_sup"
                    android:icon="@drawable/ic_supervisor_account_black_24dp"
                    android:title="@string/support" />

                <item
                    android:id="@+id/nav_contacts"
                    android:icon="@drawable/ic_import_contacts_black_24dp"
                    android:title="@string/contacts" />

                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/rate" />
            </group>
        </menu>
    </item>

</menu>
