<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:fitsSystemWindows="true"
    tools:context=".SecondActivity">

    <ru.geekbrains.weatherapp.CustomView
        android:id="@+id/customView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cv_Color="@color/colorAccent"
        app:cv_Radius="100" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rob"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_id"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rob"

        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <ImageView
        android:id="@+id/rain_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@id/temp"
        android:layout_marginStart="@dimen/border"
        android:src="@drawable/white_rain"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/sun_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@id/temp"
        android:layout_marginStart="@dimen/border"
        android:src="@drawable/white_sun"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rain_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/rain"
        android:textSize="@dimen/text_size_for_days_degre"

        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintStart_toEndOf="@+id/rain_image" />

    <TextView
        android:id="@+id/sun_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rob"
        android:text="@string/sun"
        android:textSize="@dimen/text_size_for_days_degre"
        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintStart_toEndOf="@+id/rain_image" />

    <TextView
        android:id="@+id/temp"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:layout_marginStart="@dimen/border"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/robt"
        android:text="@string/degrees"

        android:textSize="@dimen/text_size_for_degree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="4dp"
        android:text="Start Service"
        app:layout_constraintBottom_toTopOf="@+id/wetness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Stop Service"
        app:layout_constraintBottom_toBottomOf="@+id/start_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_service"
        app:layout_constraintTop_toTopOf="@+id/start_service" />

    <TextView
        android:id="@+id/day"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/degrees_for_day"
        android:textSize="@dimen/text_size_for_days_degre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toTopOf="@+id/temp" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_below="@+id/day"
        android:layout_alignStart="@id/day"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/night"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/degrees_for_night"
        android:textSize="@dimen/text_size_for_days_degre"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/wind_speed"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/rob"
        android:text="@string/speed_wind"
        android:textSize="@dimen/text_for_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wetness"
        style="@style/Mytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/rob"
        android:text="@string/wetness"
        android:textSize="@dimen/text_for_switch"
        app:layout_constraintBottom_toTopOf="@+id/wind_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="day,night,view,temp" />

    <android.support.constraint.Group
        android:id="@+id/group_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="rain_id,rain_image" />

    <android.support.constraint.Group
        android:id="@+id/group_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="sun_id,sun_image" />
</android.support.constraint.ConstraintLayout>